# Verisure

./: .gitignore  README.md  pytest.ini  setup.cfg
tests/: __init__.py
verisure/: __init__.py
