[metadata]
name = python_verisure
version = 0.0.1
author = Niels Perfors
author_email = niels@perfors.dev
description = A Python client to interact with Verisure
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/niro1987/python-verisure
project_urls =
    Documentation = https://github.com/niro1987/python-verisure
    Source = https://github.com/niro1987/python-verisure
    Tracker = https://github.com/niro1987/python-verisure/issues
platforms = any
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
license = MIT

[options]
zip_safe = False
packages = find:
python_requires = >=3.10
install_requires =
    requests

[options.extras_require]
dev =
    black
    flake8
    isort
    pylint
    pytest
    pytest-dotenv

[options.packages.find]
exclude =
    tests

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
indent = "    "
# by default isort don't check module indexes
not_skip = __init__.py
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
sections = FUTURE,STDLIB,INBETWEENS,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY
known_first_party = verisure
combine_as_imports = true

[flake8]
exclude =
    .venv,
    .vscode,
    .git

doctests = True
# To work with Black
max-line-length = 88
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    E501,
    W503,
    E203,
    D202,
    W504

[pylint]
disable = duplicate-code

[pylint.logging]
logging-modules = logging

[pylint.miscellaneous]
notes =
    FIXME,
    TODO
